--- a/src/main/webapp/secured/admin/upravljanjeDogadajima.xhtml
+++ b/src/main/webapp/secured/admin/upravljanjeDogadajima.xhtml
@@ -276,7 +276,7 @@
             <h:panelGrid columns="2" id="panelGrid_data_table" title="Rezultati pretrage">
                 <p:dataTable id="data_table_rezultati" var="filterDogadajDto"
                              rows="10"
-                             paginator="bottom"
+                             paginator="true"
                              paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                              currentPageReportTemplate="{startRecord}-{endRecord} of {totalRecords} records"
                              rowsPerPageTemplate="5,10,15"
